<resources>
    <string name="app_name">Easy Storage</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="warning">Warning</string>
    <string name="confirm_delete_message">Are you sure you want to delete this cargo?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cargo_image_deleted">Cargo image deleted</string>
    <string name="delete_image_failed">delete image failed</string>
    <string name="edit_warning_message">Editing key attributes should base on the real storage status!</string>
    <string name="ok">OK</string>
    <string name="none">none</string>
    <string name="invalid_input_type">Invalid input type, please try again.</string>
    <string name="barcode_already_exist">Barcode already exist, please use a new one.</string>
    <string name="cargo_already_exist">Cargo already exist, please use a new name.</string>
    <string name="cargo_has_been_edited">Cargo edit successfully.</string>
    <string name="image_upload_fails">Image upload fails. Please try again.</string>
    <string name="image_upload_successfully">Image has been uploaded.</string>
    <string name="signed_in_with_colon">"Signed in: "</string>
    <string name="signed_out">Signed Out</string>
    <string name="signed_in">Signed in</string>
    <string name="sign_in_failed">Sign in failed</string>
    <string name="invalid_password">Invalid password.</string>
    <string name="no_account">No account with this email.</string>
    <string name="user_created">User created</string>
    <string name="account_creation_failed">Account creation failed</string>
    <string name="email_already_in_use">This email address is already in use.</string>
    <string name="download_list_failed">Download list failed</string>
    <string name="logged_out">Logged out</string>
    <string name="exit_alert">Are you sure you want to exit Easy Storage?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="please_enter_cargo_name_or_scan_barcode">Please enter cargo name or scan barcode.</string>
    <string name="please_enter_an_quantity">Please enter an quantity.</string>
    <string name="warehousing_successfully">Warehousing successfully</string>
    <string name="cargo_doesnt_exist">Cargo doesn\'t exist.</string>
    <string name="delivery_successfully">Delivery successfully</string>
    <string name="cargo_doesnt_exist_or_insufficient_quantity">Cargo doesn\'t exist or insufficient quantity.</string>
    <string name="empty">empty</string>
    <string name="new_item_has_been_added">New item has been added.</string>
    <string name="cargo_name">Cargo Name: </string>
    <string name="cargo_price">Cargo Price: </string>
    <string name="cargo_amount">Cargo Amount: </string>
    <string name="total_value">Total Value: </string>
    <string name="cargo_barcode">Cargo Barcode: </string>
    <string name="cargo_barcode_optional">Cargo Barcode (Optional): </string>
    <string name="cargo_description">Cargo Description: </string>
    <string name="content_cargo_image">cargo image</string>
    <string name="cargo_picture">Cargo Picture (Optional): </string>
    <string name="take_picture">Take picture</string>
    <string name="scan_barcode">Scan barcode</string>
    <string name="enter_your_cargo_name">Enter your cargo name: </string>
    <string name="or">or</string>
    <string name="scan_barcode_colon">scan barcode: </string>
    <string name="scan">Scan</string>
    <string name="quantity_colon">Quantity: </string>
    <string name="confirm">Confirm</string>
    <string name="types_of_cargos">Types of Cargos: </string>
    <string name="total_amount">Total Amount: </string>
    <string name="average_price">Average Price: </string>
    <string name="initializing">initializing...</string>
    <string name="new_feature_text">Version 1.1 new feature: \n1.Online database connected, now you can log in on any device to see your storage! \n2.Barcode scanning function: Now you can scan the mBarcode of your cargo! \n3.Fixed a bug caused storage list display incorrectly.</string>
    <string name="click_menu_to_check_storage">Click on the menu to check your storage list</string>
    <string name="add">Add</string>
    <string name="price">Price:</string>
    <string name="amount">Amount:</string>
    <string name="easy_storage">Easy Storage</string>
    <string name="welcome">Welcome!</string>
    <string name="my_storage">My Storage</string>
    <string name="add_new_item">Add New Item</string>
    <string name="storage_overview">Storage Overview</string>
    <string name="warehousing">Warehousing</string>
    <string name="delivery">Delivery</string>
    <string name="log_out">Log out</string>
    <string name="email_required">Email Required</string>
    <string name="password_required">Password Required</string>
    <string name="exit">Exit</string>
</resources>
